# butler-agent

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REFACTOR.md  CHANGELOG.md  CONTRIBUTING.md  CORE_CAPABILITIES_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  USAGE.md  pyproject.toml  release-please-config.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
data/infra/: .gitkeep  kind-config.yaml.example
docs/: ARCHITECTURE_PLAN.md  addon-architecture-proposal.md  ci-cd.md  display-refactor-plan.md  keybindings.md  progress-display-design.md
src/agent/: __init__.py  activity.py  agent.py  cli.py  clients.py  config.py  memory.py  middleware.py  observability.py  persistence.py
src/agent/cluster/: config.py  config_merge.py  kind_manager.py  kubectl_manager.py  status.py  tools.py
src/agent/cluster/addons/: __init__.py  base.py  ingress_nginx.py  manager.py
src/agent/cluster/templates/: custom.yaml  default.yaml  minimal.yaml
src/agent/display/: __init__.py  events.py  execution_context.py  execution_tree.py  formatters.py
src/agent/prompts/: __init__.py  system.md
src/agent/utils/: async_subprocess.py  errors.py  paths.py  port_checker.py  terminal.py
src/agent/utils/keybindings/: __init__.py  handler.py  manager.py
src/agent/utils/keybindings/handlers/: __init__.py  clear_prompt.py  shell_command.py
src/butler/: __init__.py  activity.py  agent.py  cli.py  clients.py  config.py  llm_client.py  memory.py  middleware.py  observability.py  persistence.py
src/butler/cluster/: config.py  kind_manager.py  status.py  tools.py
src/butler/display/: formatters.py  progress.py  tables.py
src/butler/utils/: errors.py  paths.py  validation.py
tests/: conftest.py
tests/fixtures/: invalid-manifest.yaml  sample-manifest.yaml
tests/mocks/: __init__.py  mock_client.py
tests/unit/: test_activity.py  test_addon_base.py  test_addon_ingress.py  test_addon_manager.py  test_agent.py  test_cli.py  test_clients.py  test_cluster_addons.py  test_cluster_config.py  test_config.py  test_config_merge.py  test_display_events.py  test_errors.py  test_keybinding_handlers.py  test_keybinding_manager.py  test_kubectl_manager.py  test_kubectl_tools.py  test_llm_client.py  test_memory.py  test_middleware.py  test_persistence.py  test_terminal.py  test_validation.py  test_version.py
